button and header spacing fixes

--- a/styles/style.css
+++ b/styles/style.css
@@ -22,7 +22,7 @@ body.references {
 }
 
 h1, h2, h3, h4, h5 {
-  margin: 3rem 0 1.38rem;
+  margin: 2rem 0 1.38rem;
   font-family: 'Poppins', sans-serif;
   font-weight: 400;
   line-height: 1.3;
@@ -45,7 +45,7 @@ h4 {font-size: 1.563rem; color: rgb(2, 93, 103); text-align: center; position: r
 
 h5 {font-size: 1.rem; color:  rgb(2, 93, 103); text-align: center; position: relative;}
 
-h6 {font-size: 0.8rem; color: black ; text-align: center; position: relative;}
+h6 {font-size: 0.8rem; line-height:1rem; black ; text-align: center; position: relative;}
 
 p {
   /* margin: 0 0 1.38rem; */
@@ -177,7 +177,7 @@ ul.references li::after {
   border: 3px solid black;
   background-color: rgb(121, 3, 3);
   color: white;
-  margin: 3rem 0 1.38rem;
+  margin: 1rem 0;
   padding-block: 1rem 1.5rem;
   margin-inline: 50%;
   transition-duration: .4s;
